--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@totvs/thf-ui": "^2.7.2",
     "angular2-highlight-js": "^6.0.1-alpha",
     "core-js": "2.5.7",
+    "jwt-decode": "^2.2.0",
     "ngx-cookie-service": "^1.0.10",
     "rxjs": "6.3.2",
     "zone.js": "~0.8.26"
